--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
     <div class="cont">
-        <div class="row"></div>
+        <div class="row" id="sides">
+            <div class="side" id="player"></div>
+            <div class="side" id="enemy"></div>
+        </div>
         <div class="row" id="moves">
             <div class="move" id="rock"><p class="move-t">Rock</p></div>
             <div class="move" id="paper"><p class="move-t">Paper</p></div>
