--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="script.js" defer></script>
 </head>
 
 <body>
     <div class="cont">
         <div class="row" id="sides">
-            <div class="side" id="player"></div>
-            <div class="side" id="enemy"></div>
+            <div class="side" id="player"><img src="" alt="" id="p"></div>
+            <div class="side" id="enemy"><img src="" alt="" id="e"></div>
         </div>
         <div class="row" id="moves">
             <div class="move" id="rock"><p class="move-t">Rock</p></div>
