anim and images

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div class="cont">
         <div class="row" id="sides">
-            <div class="side" id="player"><img src="" alt="" id="p"></div>
-            <div class="side" id="enemy"><img src="" alt="" id="e"></div>
+            <div class="side" id="player"><img src="rock_hand.png" alt="" id="p"></div>
+            <div class="side" id="enemy"><img src="rock_hand.png" alt="" id="e"></div>
         </div>
         <div class="row" id="moves">
             <div class="move" id="rock"><p class="move-t">Rock</p></div>
