--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="cont">
         <div class="row" id="sides">
             <div class="side" id="player"><img src="rock_hand.png" alt="" id="p"></div>
+            <h2 class="result"></h2>
             <div class="side" id="enemy"><img src="rock_hand.png" alt="" id="e"></div>
         </div>
         <div class="row" id="moves">
