core is finished + better

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <div class="cont">
         <div class="row" id="sides">
             <div class="side" id="player"><img src="rock_hand.png" alt="" id="p"></div>
-            <h2 class="result"></h2>
+            <div class="scores">
+                <h2 class="result"></h2>
+                <div>
+                    <span id="pscore">0</span><span>-</span><span id="escore">0</span>
+                </div>
+            </div>
             <div class="side" id="enemy"><img src="rock_hand.png" alt="" id="e"></div>
         </div>
         <div class="row" id="moves">
